--- a/RCS2023.html
+++ b/RCS2023.html
@@ -74,16 +74,15 @@
                                 <ul data-breakpoint="1025" class="flexnav">
                                     <li class="link menu-timeline active"><a class="link" href="#">portfolio</a>
 																			<ul>
-																				<li><a class="ajax-link" href="RCS2023.html" data-type="page-transition">Raps City Social</a></li>
 																				<li><a class="ajax-link" href="changethegame.html" data-type="page-transition">Change the Game 2.0 x MLSE Foundation</a></li>
-                                        <li><a class="ajax-link" href="globljam.html" data-type="page-transition">Globl Jam x Canada Basketball</a></li>
+																				<li><a class="ajax-link" href="globljam.html" data-type="page-transition">Globl Jam x Canada Basketball</a></li>
 																				<li><a class="ajax-link" href="fifa-2026.html" data-type="page-transition">Toronto x FIFA World Cup 2026</a></li>
                                         <li><a class="ajax-link" href="raptors-tunnel.html" data-type="page-transition">Toronto Raptors x Hudson's Bay Tunnel</a></li>
                                         <li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Mad Love x Canada Basketball</a></li>
 																				<li><a class="ajax-link" href="pcexpress.html" data-type="page-transition">Loblaw Digital x PC Express</a></li>
 																				<li><a class="ajax-link" href="fashion-tech" data-type="page-transition">Fashion Exchange x Women in Fashion Technology</a></li>
 																				<li><a class="ajax-link" href="misc.html" data-type="page-transition">Misc.</a></li>
-																			</ul>
+                                      </ul>
                                     </li>
                                     <li class="link menu-timeline"><a class="ajax-link link" data-type="page-transition" href="about.html">about</a></li>
                                 </ul>
@@ -115,8 +114,8 @@
                     <div id="hero-styles" class="parallax-onscroll">
                         <div id="hero-caption" class="text-align-center">
                             <div class="inner">
-                                <!-- <h1 class="hero-title">FIFA World Cup <span>2026</span></h1> -->
-                                <!-- <h2 class="hero-subtitle">A creative package designed for Toronto’s FIFA World Cup 2026 host city bid.</h2> -->
+                                <!-- <h1 class="hero-title">Globl <span>Jam</span></h1>
+                                <h2 class="hero-subtitle">Lorem Ipsum</h2> -->
 
                                 <div class="scroll-down-wrap no-border link">
                                     <a href="#" class="section-down-arrow ">
@@ -129,19 +128,13 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div id="hero-bg-wrapper">
-                    <div id="hero-image-parallax">
-                        <div id="hero-bg-image" style="background-image:url(images/changethegame-title.jpg)">
-                        	<div class="hero-video-wrapper">
-                                <video loop muted class="bgvid">
-																	<source src="motion/CTGFred_1200x630.mp4" type="video/mp4">
-							<source src="motion/CTGFred_1200x630.mp4" type="video/webm">
-                                </video>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+									</div>
+									<div id="hero-bg-wrapper">
+	                    <div id="hero-image-parallax">
+	                        <div id="hero-bg-image" style="background-image:url(images/projects/RCS-01.jpg)">
+	                        </div>
+	                    </div>
+	                </div>
                 <!--/Hero Section -->
 
 
@@ -155,7 +148,8 @@
 												<div class="container">
 
 													<p>project</p>
-													<h5 class="has-animation" data-delay="10">A creative refresh for MLSE Foundation's Change the Game. A transmedia campaign with a consistent effort to invest in our future all-stars and hometown heroes, leaving no player behind.</h5>
+													<h5 class="has-animation" data-delay="10">Raps City Social is the annual Gala event to celebrate our Toronto Raptors in style. Toronto Raptors players and staff mix and mingle with fans in this event to support MLSE Foundation. Funds raised will support MLSE Foundation and the Change the Game campaign, building the future leaders of tomorrow and providing youth access to recognize their potential through sport.</h5>
+
 
 												</div>
 
@@ -174,15 +168,9 @@
 
 														<div class="one_third has-animation" data-delay="150">
 																		<p>Team</p>
-																			<h5><h7>Creative Director </h7>Kevin Mones
-																				<br class="destroy"><h7>Art Director </h7>Peiying Cheung
-																				<br class="destroy"><h7>Designer </h7>Ben Lam, Sonica Katoch
-																				<br class="destroy"><h7>Motion </h7>Hasan Dadah
-																				<!-- <br class="destroy"><h7>Producer </h7>Duane Watson
-																				<br class="destroy"><h7>Strategy </h7>Iain Crerar
-																				<br class="destroy"><h7>Copy Writer </h7>Clayton Hansler
-																				<br class="destroy"><h7>Agency </h7>Rack & Pinion -->
-																			</h5>
+																		<h5><h7>Creative Director </h7>Kevin Mones
+																			<br class="destroy"><h7>Art Director </h7>Peiying Cheung
+																			<br class="destroy"><h7>Designer </h7> Jinah Jung, Janet Wen, Sonica Katoch 
 																</div>
 
 														<div class="one_third last has-animation" data-delay="150">
@@ -198,18 +186,24 @@
 										<!--/Row -->
 
 										<!-- Row -->
-										<div class="vc_row">
+										<div class="vc_row row_padding_bottom">
 
 												<div class="container">
 
 														<div class="one_third has-animation" data-delay="150">
-																		<p>Client</p>
-																		<h5>MLSE Foundation (In-House)</h5>
+																			<p>Client</p>
+																			<h5>Toronto Raptors (in-house)
+																			<br class="destroy">MLSE Foundation</h5>
+																</div>
+
+														<div class="one_third has-animation" data-delay="150">
+																		<p>venue</p>
+																		<h5>Rebel</h5>
 																</div>
 
 														<div class="one_third last has-animation" data-delay="150">
-																		<p>Year</p>
-																		<h5>2022</h5>
+															<p>Year</p>
+															<h5>2023</h5>
 
 														</div>
 												</div>
@@ -218,13 +212,14 @@
 										<!--/Row -->
 
 										<!-- Row -->
-										<div class="vc_row row_padding_top row_padding_bottom">
+										<div class="vc_row full">
 
 											<div class="container">
-												<div class="has-animation" data-delay="150">
-													<p>OBJECTIVE</p>
-													<h5 class="has-animation">In 2020, CTG 1.0 drove awareness to the systemic barriers preventing youth from reaching their potential. But, without enterprise-wide department integration and support, the campaign hadn’t yet reached it’s full potential. The new goal is to rally our fans and partners to fundraise <h7>$30M in 4 YEARS.</h7></h5>
-												</div>
+
+												<figure class="has-animation" data-delay="50" >
+													<img src="images/projects/RCS-02.jpg" alt="Image Title">
+												</figure>
+
 											</div>
 
 										</div>
@@ -236,7 +231,7 @@
 											<div class="container">
 
 												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/ctg01.jpg" alt="Image Title">
+													<img src="images/projects/RCS-03.jpg" alt="Image Title">
 												</figure>
 
 											</div>
@@ -244,114 +239,87 @@
 										</div>
 										<!--/Row -->
 
-										<!-- Row -->
-										<div class="vc_row row_padding_top row_padding_bottom">
+												<!-- Row -->
+												<div class="vc_row full">
 
-												<div class="container">
+													<div class="container">
 
-														<div class="one_half">
+														<figure class="has-animation" data-delay="50" >
+															<img src="images/projects/RCS-04.jpg" alt="Image Title">
+														</figure>
 
-																<figure class="has-animation" data-delay="10">
-																	<video style="height:auto;width:100%" id="myVideo" autoplay muted loop preload="auto">
-																			<source src="motion/FC_CTG_TODAYS_TOMORROW_A_MAIN.mov" type="video/mp4">
-																	</video>
-																</figure>
-
-														</div>
-
-														<div class="one_half last">
-
-																<figure class="has-animation" data-delay="20">
-																	<video style="height:auto;width:100%" id="myVideo" autoplay muted loop preload="auto">
-																			<source src="motion/CTG V08_Campbell_BOWL_A_Q1.mov" type="video/mp4">
-																	</video>
-																</figure>
-
-														</div>
+													</div>
 
 												</div>
+												<!--/Row -->
 
-										</div>
-										<!--/Row -->
+												<!-- Row -->
+												<div class="vc_row full">
 
-										<!-- Row -->
-										<div class="vc_row full">
+													<div class="container">
 
-											<div class="container">
+														<figure class="has-animation" data-delay="50" >
+															<img src="images/projects/RCS-05.jpg" alt="Image Title">
+														</figure>
 
-												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/ctg02.jpg" alt="Image Title">
-												</figure>
+													</div>
 
-											</div>
+												</div>
+												<!--/Row -->
 
-										</div>
-										<!--/Row -->
+												<!-- Row -->
+												<div class="vc_row full">
 
-										<!-- Row -->
-										<div class="vc_row full">
+													<div class="container">
 
-											<div class="container">
+														<figure class="has-animation" data-delay="50" >
+															<img src="images/projects/RCS-06.jpg" alt="Image Title">
+														</figure>
 
-												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/ctg03.jpg" alt="Image Title">
-												</figure>
+													</div>
 
-											</div>
+												</div>
+												<!--/Row -->
 
-										</div>
-										<!--/Row -->
+												<!-- Row -->
+												<div class="vc_row full">
 
-										<!-- Row -->
-										<div class="vc_row full">
+													<div class="container">
 
-											<div class="container">
+														<figure class="has-animation" data-delay="50" >
+															<img src="images/projects/RCS-07.jpg" alt="Image Title">
+														</figure>
 
-												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/ctg04.jpg" alt="Image Title">
-												</figure>
+													</div>
 
-											</div>
+												</div>
+												<!--/Row -->
 
-										</div>
-										<!--/Row -->
+												<!-- Row -->
+												<div class="vc_row full">
 
-										<!-- Row -->
-										<div class="vc_row full">
+													<div class="container">
 
-											<div class="container">
+														<figure class="has-animation" data-delay="50" >
+															<img src="images/projects/RCS-08.jpg" alt="Image Title">
+														</figure>
 
-												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/ctg05.jpg" alt="Image Title">
-												</figure>
+													</div>
 
-											</div>
+												</div>
+												<!--/Row -->
 
-										</div>
-										<!--/Row -->
 
-										<!-- Row -->
-										<div class="vc_row full">
 
-											<div class="container">
-
-												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/ctg06.jpg" alt="Image Title">
-												</figure>
-
-											</div>
-
-										</div>
-										<!--/Row -->
 
                 	<!--/Main Page Content -->
 
                     <!-- Project Navigation -->
                     <div id="project-nav">
                         <div class="next-project-wrap">
-                            <div class="next-project-image" style="background-image:url(images/globljam-hero.jpg)"></div>
-                            <a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="globljam.html">
-                                <div class="main-title">Globl <span>Jam</span></div>
+                            <div class="next-project-image" style="background-image:url(images/toronto-fifa-hero.jpeg"></div>
+                            <a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="fifa-2026.html">
+                                <div class="main-title">Change the <span>Game</span></div>
                                 <div class="main-subtitle">Next Project</div>
                             </a>
                         </div>
