--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                                 <ul data-breakpoint="1025" class="flexnav">
                                     <li class="link menu-timeline active"><a class="link" href="#">portfolio</a>
 																			<ul>
+																				<li><a class="ajax-link" href="RCS2023.html" data-type="page-transition">Raps City Social</a></li>
 																				<li><a class="ajax-link" href="changethegame.html" data-type="page-transition">Change the Game 2.0 x MLSE Foundation</a></li>
                                         <li><a class="ajax-link" href="globljam.html" data-type="page-transition">Globl Jam x Canada Basketball</a></li>
 																				<li><a class="ajax-link" href="fifa-2026.html" data-type="page-transition">Toronto x FIFA World Cup 2026</a></li>
@@ -121,78 +122,87 @@
 															<!-- Section Slide -->
 															<div class="swiper-slide active" data-number="01" data-slide="1">
 																	<a class="ajax-link-project" data-type="page-transition" href="changethegame.html">
-																		<div class="slide-title" data-number="01"><span>Change the Game 2.0</span></div>
+																		<div class="slide-title" data-number="01"><span>Raps City Social</span></div>
 																	</a>
-																	<div class="slide-caption" data-slide-caption="1">Tomorrow is built today. Invest in our future all-stars and hometown heroes, leaving no player behind.</div>
+																	<div class="slide-caption" data-slide-caption="1">Celebrating the 2022-2023 Toronto Raptors at the annual Raps City Social.</div>
+															</div>
+															<!--/Section Slide -->
+
+															<!-- Section Slide -->
+															<div class="swiper-slide" data-number="02" data-slide="2">
+																	<a class="ajax-link-project" data-type="page-transition" href="changethegame.html">
+																		<div class="slide-title" data-number="02"><span>Change the Game 2.0</span></div>
+																	</a>
+																	<div class="slide-caption" data-slide-caption="2">Tomorrow is built today. Invest in our future all-stars and hometown heroes, leaving no player behind.</div>
 															</div>
 															<!--/Section Slide -->
 
                                 <!-- Section Slide -->
-                                <div class="swiper-slide" data-number="02" data-slide="2">
-                                    <a class="ajax-link-project" data-type="page-transition" href="globljam.html">
-                                    	<div class="slide-title" data-number="02"><span>Globl Jam</span></div>
-                                    </a>
-                                    <div class="slide-caption" data-slide-caption="2">Introducing Canada Basketball’s first annual Next Gen U23 Tournament in Toronto.</div>
-                                </div>
-                                <!--/Section Slide -->
-
-                                <!-- Section Slide -->
                                 <div class="swiper-slide" data-number="03" data-slide="3">
-                                    <a class="ajax-link-project" data-type="page-transition" href="fifa-2026.html">
-                                    	<div class="slide-title" data-number="03"><span>FIFA 2026</span></div>
+                                    <a class="ajax-link-project" data-type="page-transition" href="globljam.html">
+                                    	<div class="slide-title" data-number="03"><span>GLOBL JAM</span></div>
                                     </a>
-                                    <div class="slide-caption" data-slide-caption="3">A creative package designed for Toronto’s FIFA World Cup 2026 host city bid.</div>
+                                    <div class="slide-caption" data-slide-caption="3">Introducing Canada Basketball’s first annual Next Gen U23 Tournament in Toronto.</div>
                                 </div>
                                 <!--/Section Slide -->
-
 
                                 <!-- Section Slide -->
                                 <div class="swiper-slide" data-number="04" data-slide="4">
-                                    <a class="ajax-link-project" data-type="page-transition" href="raptors-tunnel.html">
-                                    	<div class="slide-title" data-number="04"><span>Raptors Tunnel</span></div>
+                                    <a class="ajax-link-project" data-type="page-transition" href="fifa-2026.html">
+                                    	<div class="slide-title" data-number="04"><span>FIFA 2026</span></div>
                                     </a>
-                                   	<div class="slide-caption" data-slide-caption="4">Re-skinning the Toronto Raptors iconic tunnel in the Scotiabank Arena.</div>
+                                    <div class="slide-caption" data-slide-caption="4">A creative package designed for Toronto’s FIFA World Cup 2026 host city bid.</div>
                                 </div>
                                 <!--/Section Slide -->
 
 
                                 <!-- Section Slide -->
                                 <div class="swiper-slide" data-number="05" data-slide="5">
-                                    <a class="ajax-link-project" data-type="page-transition" href="mad-love.html">
-                                    	<div class="slide-title" data-number="05"><span>Mad Love</span></div>
+                                    <a class="ajax-link-project" data-type="page-transition" href="raptors-tunnel.html">
+                                    	<div class="slide-title" data-number="05"><span>Raptors Tunnel</span></div>
                                     </a>
-                                    <div class="slide-caption" data-slide-caption="5">A social campaign for Canada Basketball to bring awareness to women athletes in basketball and beyond.</div>
+                                   	<div class="slide-caption" data-slide-caption="5">Re-skinning the Toronto Raptors iconic tunnel in the Scotiabank Arena.</div>
+                                </div>
+                                <!--/Section Slide -->
+
+
+                                <!-- Section Slide -->
+                                <div class="swiper-slide" data-number="06" data-slide="6">
+                                    <a class="ajax-link-project" data-type="page-transition" href="mad-love.html">
+                                    	<div class="slide-title" data-number="06"><span>Mad Love</span></div>
+                                    </a>
+                                    <div class="slide-caption" data-slide-caption="6">A social campaign for Canada Basketball to bring awareness to women athletes in basketball and beyond.</div>
                                 </div>
                                 <!--/Section Slide -->
 
 
                                <!-- Section Slide -->
-                                <div class="swiper-slide" data-number="06" data-slide="6">
+                                <div class="swiper-slide" data-number="07" data-slide="7">
                                     <a class="ajax-link-project" data-type="page-transition" href="pcexpress.html">
-                                    	<div class="slide-title" data-number="06"><span>PC Express</span></div>
+                                    	<div class="slide-title" data-number="07"><span>PC Express</span></div>
                                     </a>
-                                    <div class="slide-caption" data-slide-caption="6">Designed digital creative at Loblaw Digital for Canada's simplest and most delightful online shopping experience, PC Express.</div>
+                                    <div class="slide-caption" data-slide-caption="7">Designed digital creative at Loblaw Digital for Canada's simplest and most delightful online shopping experience, PC Express.</div>
 
                                 </div>
                                 <!--/Section Slide -->
 
 
                                 <!-- Section Slide -->
-                                <div class="swiper-slide" data-number="07" data-slide="7">
+                                <div class="swiper-slide" data-number="08" data-slide="8">
                                     <a class="ajax-link-project" data-type="page-transition" href="project06.html">
-                                   		<div class="slide-title" data-number="07"><span>Fashion Tech.</span></div>
+                                   		<div class="slide-title" data-number="08"><span>Fashion Tech.</span></div>
                                     </a>
-                                   	<div class="slide-caption" data-slide-caption="7">UX/UI and brand identity created for the Women in Fashion Technology program at Fashion Exchange Toronto.</div>
+                                   	<div class="slide-caption" data-slide-caption="8">UX/UI and brand identity created for the Women in Fashion Technology program at Fashion Exchange Toronto.</div>
 
                                 </div>
                                 <!--/Section Slide -->
 
 																<!-- Section Slide -->
-																<div class="swiper-slide" data-number="08" data-slide="8">
+																<div class="swiper-slide" data-number="09" data-slide="9">
 																		<a class="ajax-link-project" data-type="page-transition" href="misc.html">
-																			<div class="slide-title" data-number="08"><span>Misc.</span></div>
+																			<div class="slide-title" data-number="09"><span>Misc.</span></div>
 																		</a>
-																		<div class="slide-caption" data-slide-caption="8">A collection of work across my career as a designer.</div>
+																		<div class="slide-caption" data-slide-caption="9">A collection of work across my career as a designer.</div>
 
 																</div>
 																<!--/Section Slide -->
@@ -207,7 +217,9 @@
                     <div id="image-slider">
                     	<div class="image-slider-wrapper">
 
-														<div class="slider-img" data-slide="1" data-src="images/changethegame-title.jpg">
+												<div class="slider-img" data-slide="1" data-src="images/raptors-tunnel-hero.jpg"></div>
+
+														<div class="slider-img" data-slide="2" data-src="images/changethegame-title.jpg">
 															<div class="hero-video-wrapper">
 																		<video loop muted class="bgvid">
 																				<source src="motion/CTGFred_1200x630.mp4" type="video/mp4">
@@ -216,7 +228,7 @@
 																</div>
 														</div>
 
-														<div class="slider-img" data-slide="2" data-src="images/globljam-hero.jpg">
+														<div class="slider-img" data-slide="3" data-src="images/globljam-hero.jpg">
                             	<div class="hero-video-wrapper">
                                     <video loop muted class="bgvid">
                                         <source src="motion/CBxSN_Transition.mp4" type="video/mp4">
@@ -225,7 +237,7 @@
                                 </div>
                             </div>
 
-                            <div class="slider-img" data-slide="3" data-src="images/toronto-fifa-hero.jpg">
+                            <div class="slider-img" data-slide="4" data-src="images/toronto-fifa-hero.jpg">
                             	<div class="hero-video-wrapper">
                                     <video loop muted class="bgvid">
                                         <source src="motion/Transistion-Set.mp4" type="video/mp4">
@@ -234,11 +246,11 @@
                                 </div>
                             </div>
 
-														<div class="slider-img" data-slide="4" data-src="images/raptors-tunnel-hero.jpg"></div>
-                            <div class="slider-img" data-slide="5" data-src="images/madlove-hero.jpg"></div>
-														<div class="slider-img" data-slide="6" data-src="images/pcx-hero.jpg"></div>
-                            <div class="slider-img" data-slide="7" data-src="images/fashiontech-hero.jpg"></div>
-														<div class="slider-img" data-slide="8" data-src="images/misc-hero.png"></div>
+														<div class="slider-img" data-slide="5" data-src="images/raptors-tunnel-hero.jpg"></div>
+                            <div class="slider-img" data-slide="6" data-src="images/madlove-hero.jpg"></div>
+														<div class="slider-img" data-slide="7" data-src="images/pcx-hero.jpg"></div>
+                            <div class="slider-img" data-slide="8" data-src="images/fashiontech-hero.jpg"></div>
+														<div class="slider-img" data-slide="9" data-src="images/misc-hero.png"></div>
                         </div>
                     </div>
                     <!--/Showcase Gallery -->
@@ -254,7 +266,7 @@
             <footer class="fixed">
                 <div id="footer-container">
 
-                    <div id="counter-wrap" data-hover="08">
+                    <div id="counter-wrap" data-hover="09">
                     		<span data-slide-count="1">01</span>
                         <span data-slide-count="2">02</span>
                         <span data-slide-count="3">03</span>
@@ -262,7 +274,8 @@
                         <span data-slide-count="5">05</span>
                       	<span data-slide-count="6">06</span>
 												<span data-slide-count="7">07</span>
-												<span data-slide-count="7">08</span>
+												<span data-slide-count="8">08</span>
+												<span data-slide-count="9">09</span>
                     </div>
 
                     <div class="socials-wrap">
