--- a/misc.html
+++ b/misc.html
@@ -143,6 +143,43 @@
 										<div class="container">
 
 											<p>project</p>
+											<h4 class="has-animation" data-delay="10">Pascal Siakam Presents Raptors Halloween</h4>
+											<p></p>
+											<div id="justified-grid">
+											<!-- Collage item with pop-up -->
+
+											<div class="collage-thumb">
+													<a class="image-link" href="images/projects/halloween01.jpg">
+															<img src="images/projects/halloween01.jpg" alt="img"/>
+															<h6><div class="thumb-info">Custom Type</div></h6>
+													</a>
+											</div>
+
+											<div class="collage-thumb">
+													<a class="image-link" href="images/projects/halloween02.jpg">
+															<img src="images/projects/halloween02.jpg" alt="img"/>
+															<h6><div class="thumb-info">Dino Graphic</div></h6>
+													</a>
+											</div>
+
+											<div class="collage-thumb">
+													<a class="image-link" href="images/projects/halloween03.jpg">
+															<img src="images/projects/halloween03.jpg" alt="img"/>
+															<h6><div class="thumb-info">Pascal Siakam</div></h6>
+													</a>
+											</div>
+
+								</div>
+								<!--/Row -->
+
+
+
+								<!-- Row -->
+								<div class="vc_row">
+
+										<div class="container">
+
+											<p>project</p>
 											<h4 class="has-animation" data-delay="10">Black History Month x Toronto Maple Leafs 2022 Creative</h4>
 											<p></p>
 
