--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 															<!-- Section Slide -->
 															<div class="swiper-slide active" data-number="01" data-slide="1">
-																	<a class="ajax-link-project" data-type="page-transition" href="changethegame.html">
+																	<a class="ajax-link-project" data-type="page-transition" href="RCS2023.html">
 																		<div class="slide-title" data-number="01"><span>Raps City Social</span></div>
 																	</a>
 																	<div class="slide-caption" data-slide-caption="1">Celebrating the 2022-2023 Toronto Raptors at the annual Raps City Social.</div>
@@ -217,7 +217,7 @@
                     <div id="image-slider">
                     	<div class="image-slider-wrapper">
 
-												<div class="slider-img" data-slide="1" data-src="images/raptors-tunnel-hero.jpg"></div>
+												<div class="slider-img" data-slide="1" data-src="images/projects/RCS-01.jpg"></div>
 
 														<div class="slider-img" data-slide="2" data-src="images/changethegame-title.jpg">
 															<div class="hero-video-wrapper">
