--- a/index.html
+++ b/index.html
@@ -217,7 +217,14 @@
                     <div id="image-slider">
                     	<div class="image-slider-wrapper">
 
-												<div class="slider-img" data-slide="1" data-src="images/projects/RCS-01.jpg"></div>
+												<div class="slider-img" data-slide="2" data-src="images/projects/RCS-01.jpg">
+													<div class="hero-video-wrapper">
+																<video loop muted class="bgvid">
+																		<source src="motion/RCS.mp4" type="video/mp4">
+								<source src="motion/CTGFred_1200x630.mp4" type="video/webm">
+																</video>
+														</div>
+												</div>
 
 														<div class="slider-img" data-slide="2" data-src="images/changethegame-title.jpg">
 															<div class="hero-video-wrapper">
