--- a/RCS2023.html
+++ b/RCS2023.html
@@ -132,6 +132,12 @@
 									<div id="hero-bg-wrapper">
 	                    <div id="hero-image-parallax">
 	                        <div id="hero-bg-image" style="background-image:url(images/projects/RCS-01.jpg)">
+	                        	<div class="hero-video-wrapper">
+	                                <video loop muted class="bgvid">
+	                                    <source src="motion/RCS.mp4" type="video/mp4">
+										<source src="motion/Transistion-Set.mp4" type="video/webm">
+	                                </video>
+	                            </div>
 	                        </div>
 	                    </div>
 	                </div>
