RCS html edit, MISC edit

--- a/RCS2023.html
+++ b/RCS2023.html
@@ -323,8 +323,8 @@
                     <!-- Project Navigation -->
                     <div id="project-nav">
                         <div class="next-project-wrap">
-                            <div class="next-project-image" style="background-image:url(images/toronto-fifa-hero.jpeg"></div>
-                            <a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="fifa-2026.html">
+                            <div class="next-project-image" style="background-image:url(images/changethegame-title.jpg"></div>
+                            <a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="changethegame.html">
                                 <div class="main-title">Change the <span>Game</span></div>
                                 <div class="main-subtitle">Next Project</div>
                             </a>
