--- a/misc.html
+++ b/misc.html
@@ -138,17 +138,17 @@
                 <!--/Hero Section -->
 
 								<!-- Row -->
-								<div class="vc_row row_padding_top">
+								<!-- <div class="vc_row row_padding_top">
 
 										<div class="container">
 
 											<p>project</p>
 											<h4 class="has-animation" data-delay="10">Pascal Siakam Presents Raptors Halloween</h4>
 											<p></p>
-											<div id="justified-grid">
+											<div id="justified-grid"> -->
 											<!-- Collage item with pop-up -->
 
-											<div class="collage-thumb">
+											<!-- <div class="collage-thumb">
 													<a class="image-link" href="images/projects/halloween01.jpg">
 															<img src="images/projects/halloween01.jpg" alt="img"/>
 															<h6><div class="thumb-info">Custom Type</div></h6>
@@ -169,7 +169,7 @@
 													</a>
 											</div>
 
-								</div>
+								</div> -->
 								<!--/Row -->
 
 
