--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
                     <div class="vc_row">
                         <div class="container">
 
-                            <h2><a style="color:#35FF69;">Sonica</a> is a multidisciplinary designer with experience in branding and design. Her focus is to develop impactful brand identities and explore creative design solutions through powerful storytelling. Her perspective ranges in sport, music, art and culture. She is currently a Designer at Maple Leaf Sports & Entertainment based in TKARONTO/TORONTO.</h2>
+                            <h2><a style="color:#35FF69;">Sonica</a> is a multidisciplinary designer with experience in branding and design. Her focus is to develop impactful brand identities and explore creative design solutions through powerful storytelling. Her perspective ranges in sport, music, art and culture. She is currently a Freelance Designer based in TKARONTO/TORONTO.</h2>
                         </div>
                     </div>
                     <!-- /Row -->
